--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CAFE LEGENDAIRE</title>
+<meta name="theme-color" content="#3a2a1d">
 
 <!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
@@ -19,7 +20,7 @@ body::before{
   position:fixed;
   inset:0;
   background:url("IMG_0069.jpeg") center/cover no-repeat;
-  filter:blur(6px) brightness(.9);
+  filter:blur(6px) brightness(0.9);
   z-index:-1;
 }
 header{
@@ -33,43 +34,28 @@ header{
 .container{padding:10px}
 .panel,.product,.cart{
   background:rgba(255,255,255,.93);
+  backdrop-filter:blur(2px);
   border-radius:8px;
   padding:10px;
   margin-top:12px;
+  box-shadow:0 3px 8px rgba(0,0,0,.25);
 }
-.products{
-  display:grid;
-  grid-template-columns:repeat(2,1fr);
-  gap:10px
-}
+.products{display:grid;grid-template-columns:repeat(2,1fr);gap:10px}
 .product{position:relative}
-.menu{
-  position:absolute;
-  top:6px;
-  right:8px;
-  font-size:18px;
-  cursor:pointer
-}
+.menu{position:absolute;top:6px;right:8px;font-size:18px;cursor:pointer}
 .small{font-size:12px;color:#444}
 button{
-  width:100%;
-  padding:10px;
-  margin-top:6px;
-  border:none;
-  border-radius:6px;
-  font-size:15px;
-  color:#fff;
+  width:100%;padding:10px;margin-top:6px;border:none;border-radius:6px;
+  font-size:15px;color:#fff;cursor:pointer;
 }
 .green{background:#28a745}
 .red{background:#dc3545}
 .blue{background:#007bff}
 .gray{background:#6c757d}
+.filter{display:flex;gap:6px;margin:10px 0}
+.filter button{flex:1}
 .hidden{display:none}
-.history-item{
-  border-bottom:1px solid #ddd;
-  padding:6px;
-  cursor:pointer;
-}
+#scanner{margin-top:10px}
 </style>
 </head>
 
@@ -83,14 +69,24 @@ button{
 <select id="worker">
 <option>Ismat</option>
 <option>Ahmed</option>
+<option>Admin 3</option>
+<option>Admin 4</option>
+<option>Admin 5</option>
+<option>Admin 6</option>
+<option>Admin 7</option>
 </select>
-<select id="shift">
-<option>Morning</option>
-<option>Evening</option>
-</select>
+
+<select id="shift"></select>
+<button class="gray" onclick="endShift()">⏱ End Shift</button>
 </div>
 
 <h3>Products</h3>
+
+<div class="filter">
+<button class="gray" onclick="setFilter('all')">All</button>
+<button class="blue" onclick="setFilter('Drink')">Drinks</button>
+<button class="green" onclick="setFilter('Food')">Food</button>
+</div>
 
 <button class="blue" onclick="addProduct()">➕ Add Product</button>
 <button class="gray" onclick="toggleScanSell()">📷 Scan (Sell)</button>
@@ -107,20 +103,18 @@ button{
 </div>
 
 <div class="panel">
-<h3>🧾 Order History</h3>
-<div id="history"></div>
-</div>
-
-<div class="panel">
 <input type="password" id="pin" placeholder="Admin PIN">
-<button class="gray" onclick="openAdmin()">Admin</button>
+<button class="gray" onclick="openAdmin()">🔐 Admin</button>
 
 <div id="admin" class="hidden">
-<button class="blue" onclick="reportShift('Morning')">Morning Shift</button>
-<button class="blue" onclick="reportShift('Evening')">Evening Shift</button>
+<h4>📊 Accounting</h4>
+<button class="blue" onclick="report('shift')">Shift</button>
+<button class="blue" onclick="report('day')">Day</button>
+<button class="blue" onclick="report('week')">Week</button>
+<button class="blue" onclick="report('month')">Month</button>
 
 <button class="blue" onclick="exportExcel()">📥 Export Excel</button>
-<button class="red" onclick="archiveDay()">🧹 Archive & Reset Day</button>
+<button class="red" onclick="archiveDay()">📅 Archive & Reset Day</button>
 
 <div id="reports"></div>
 </div>
@@ -129,52 +123,71 @@ button{
 </div>
 
 <script>
-/* FIREBASE */
-const firebaseConfig={
-  apiKey:"AIzaSyCdWSIrpEwi4o83WVNoMd2D36W0ngaJC28",
-  authDomain:"cafe-legendaire-pos.firebaseapp.com",
-  projectId:"cafe-legendaire-pos",
-  storageBucket:"cafe-legendaire-pos.firebasestorage.app",
-  messagingSenderId:"548449258422",
-  appId:"1:548449258422:web:ab140347d114bf9d82cf17"
+/* ================= FIREBASE CONFIG ================= */
+const firebaseConfig = {
+  apiKey: "AIzaSyCdWSIrpEwi4o83WVNoMd2D36W0ngaJC28",
+  authDomain: "cafe-legendaire-pos.firebaseapp.com",
+  projectId: "cafe-legendaire-pos",
+  storageBucket: "cafe-legendaire-pos.firebasestorage.app",
+  messagingSenderId: "548449258422",
+  appId: "1:548449258422:web:ab140347d114bf9d82cf17"
 };
+
 firebase.initializeApp(firebaseConfig);
-const db=firebase.firestore();
+const db = firebase.firestore();
 
-/* DATA */
-const ADMIN_PIN="5554";
-let PRODUCTS=[], SALES=[], cart=[];
+/* ================= DATA ================= */
+const ADMIN_PIN = "5554";
+let PRODUCTS = [];
+let SALES = [];
+let cart = [];
+let filter = "all";
+let SHIFT = "Morning";
 
-/* SYNC */
-db.collection("products").onSnapshot(s=>{
-  PRODUCTS=s.docs.map(d=>({...d.data(),id:d.id}));
+shift.innerHTML = `<option>${SHIFT}</option>`;
+
+/* ================= REALTIME SYNC ================= */
+db.collection("products").onSnapshot(snap=>{
+  PRODUCTS = snap.docs.map(d=>({...d.data(), id:d.id}));
   render();
 });
-db.collection("sales").orderBy("timestamp","desc").onSnapshot(s=>{
-  SALES=s.docs.map(d=>({...d.data(),id:d.id}));
-  renderHistory();
+
+db.collection("sales").onSnapshot(snap=>{
+  SALES = snap.docs.map(d=>d.data());
 });
 
-/* PRODUCTS */
+/* ================= UI ================= */
+function setFilter(c){filter=c;render();}
+function endShift(){
+  SHIFT = SHIFT==="Morning"?"Evening":"Morning";
+  shift.innerHTML=`<option>${SHIFT}</option>`;
+}
+
 function render(){
   products.innerHTML="";
   PRODUCTS.forEach(p=>{
+    if(filter!=="all" && p.cat!==filter) return;
     let d=document.createElement("div");
     d.className="product";
-    d.innerHTML=`<div class="menu" onclick="productMenu('${p.id}')">⋮</div>
-    <b>${p.name}</b><br>${p.price} DA<br>Stock:${p.stock}`;
+    d.innerHTML=`
+      <div class="menu" onclick="productMenu('${p.id}')">⋮</div>
+      <b>${p.name}</b><br>
+      <span class="small">${p.price} DA – ${p.cat}</span><br>
+      <span class="small">Stock: ${p.stock}</span>`;
     d.onclick=()=>addToCart(p.id);
     products.appendChild(d);
   });
 }
+
+/* ================= INVENTORY ================= */
 function addProduct(){
-  let n=prompt("Name"); if(!n)return;
-  let p=parseInt(prompt("Price")); if(isNaN(p))return;
-  let s=parseInt(prompt("Stock"))||0;
-  db.collection("products").doc(n).set({name:n,price:p,stock:s,code:""});
+  let name=prompt("Name"); if(!name) return;
+  let price=parseInt(prompt("Price")); if(isNaN(price)) return;
+  let cat=prompt("Category");
+  let stock=parseInt(prompt("Stock"))||0;
+  db.collection("products").doc(name).set({name,price,cat,stock,code:""});
 }
 
-/* PRODUCT MENU */
 let scanAssignId=null;
 function productMenu(id){
   let p=PRODUCTS.find(x=>x.id===id);
@@ -190,98 +203,58 @@ function productMenu(id){
     if(!isNaN(q)){p.stock+=q;if(p.stock<0)p.stock=0;}
   }
   if(c==="3"){scanAssignId=id;scanAssign();return;}
-  if(c==="4"){if(confirm("Delete?")){db.collection("products").doc(id).delete();return;}}
+  if(c==="4"){if(confirm("Delete?")) db.collection("products").doc(id).delete();return;}
   db.collection("products").doc(id).set(p);
 }
 
-/* CART */
+/* ================= CART ================= */
 function addToCart(id){
   let p=PRODUCTS.find(x=>x.id===id);
-  if(p.stock<=0)return;
-  p.stock--; db.collection("products").doc(id).set(p);
-  cart.push(p); renderCart();
+  if(p.stock<=0) return alert("Out of stock");
+  p.stock--;
+  db.collection("products").doc(id).set(p);
+  cart.push(p);
+  render();renderCart();
 }
+
 function renderCart(){
-  cartItems.innerHTML=""; let t=0;
-  cart.forEach(p=>{t+=p.price;
-    cartItems.innerHTML+=`${p.name} ${p.price} DA<br>`;
+  cartItems.innerHTML="";let t=0;
+  cart.forEach((p,i)=>{
+    t+=p.price;
+    cartItems.innerHTML+=`${p.name} - ${p.price} DA <span onclick="removeItem(${i})">✖</span><br>`;
   });
   total.innerText=t;
 }
-function clearCart(){
-  cart.forEach(p=>{p.stock++;db.collection("products").doc(p.id).set(p);});
-  cart=[]; renderCart();
+
+function removeItem(i){
+  let p=cart[i];
+  p.stock++;
+  db.collection("products").doc(p.id).set(p);
+  cart.splice(i,1);
+  render();renderCart();
 }
 
-/* CHECKOUT */
+function clearCart(){
+  cart.forEach(p=>{
+    p.stock++;
+    db.collection("products").doc(p.id).set(p);
+  });
+  cart=[];render();renderCart();
+}
+
 function checkout(){
   if(!cart.length)return;
-  let items={};
-  cart.forEach(p=>items[p.name]=(items[p.name]||0)+1);
-  let order=Object.keys(items).map(n=>{
-    let p=cart.find(x=>x.name===n);
-    return {name:n,price:p.price,qty:items[n]};
-  });
   db.collection("sales").add({
-    timestamp:Date.now(),
     date:new Date().toLocaleDateString(),
     time:new Date().toLocaleTimeString(),
-    shift:shift.value,
+    shift:SHIFT,
     admin:worker.value,
-    total:cart.reduce((a,b)=>a+b.price,0),
-    items:order
+    total:cart.reduce((a,b)=>a+b.price,0)
   });
-  cart=[]; renderCart();
+  cart=[];render();renderCart();
 }
 
-/* HISTORY */
-function renderHistory(){
-  history.innerHTML="";
-  SALES.forEach(s=>{
-    let d=document.createElement("div");
-    d.className="history-item";
-    d.innerHTML=`${s.time} • ${s.admin} • <b>${s.total} DA</b>`;
-    d.onclick=()=>viewOrder(s);
-    history.appendChild(d);
-  });
-}
-function viewOrder(o){
-  let txt=`${o.time} (${o.shift})\n${o.admin}\n\n`;
-  o.items.forEach(i=>txt+=`${i.name} x${i.qty}\n`);
-  txt+=`\nTOTAL ${o.total} DA`;
-  alert(txt);
-}
-
-/* ADMIN */
-function openAdmin(){
-  if(pin.value!==ADMIN_PIN)return alert("Wrong PIN");
-  admin.classList.toggle("hidden");
-}
-function reportShift(s){
-  let sum=0,count=0;
-  SALES.forEach(o=>{if(o.shift===s){sum+=o.total;count++;}});
-  reports.innerHTML=`${s}: ${count} orders<br>Total ${sum} DA`;
-}
-
-/* EXPORT + ARCHIVE */
-function exportExcel(){
-  let csv="Date,Time,Shift,Admin,Total\n";
-  SALES.forEach(s=>csv+=`${s.date},${s.time},${s.shift},${s.admin},${s.total}\n`);
-  let a=document.createElement("a");
-  a.href=URL.createObjectURL(new Blob([csv],{type:"text/csv"}));
-  a.download="CAFE_LEGENDAIRE_TODAY.csv";
-  a.click();
-}
-function archiveDay(){
-  if(!confirm("Archive today and reset POS?"))return;
-  let today=new Date().toISOString().split("T")[0];
-  db.collection("archives").doc(today).set({date:today,sales:SALES});
-  SALES.forEach(s=>db.collection("sales").doc(s.id).delete());
-  reports.innerHTML="";
-  alert("Day archived");
-}
-
-/* SCAN */
+/* ================= SCAN SELL ================= */
 let scanOpen=false,scanInstance=null;
 function toggleScanSell(){
   if(scanOpen){
@@ -291,11 +264,13 @@ function toggleScanSell(){
   scanInstance=new Html5Qrcode("scanner");
   scanInstance.start({facingMode:"environment"},{fps:10,qrbox:250},code=>{
     let p=PRODUCTS.find(x=>x.code===code);
-    if(!p)return alert("Not found");
+    if(!p) return alert("Not found");
     addToCart(p.id);
   });
   scanOpen=true;
 }
+
+/* ================= SCAN ASSIGN ================= */
 function scanAssign(){
   scanner.classList.remove("hidden");
   let qr=new Html5Qrcode("scanner");
@@ -305,6 +280,45 @@ function scanAssign(){
     p.code=code;
     db.collection("products").doc(p.id).set(p);
   });
+}
+
+/* ================= ADMIN ================= */
+function openAdmin(){
+  if(pin.value!==ADMIN_PIN) return alert("Wrong PIN");
+  admin.classList.toggle("hidden");
+}
+
+function report(type){
+  let now=new Date(),sum=0,count=0;
+  SALES.forEach(s=>{
+    let d=new Date(s.date);
+    if(type==="shift"&&s.shift!==SHIFT)return;
+    if(type==="day"&&d.toDateString()!==now.toDateString())return;
+    if(type==="week"&&now-d>7*86400000)return;
+    if(type==="month"&&d.getMonth()!==now.getMonth())return;
+    sum+=s.total;count++;
+  });
+  reports.innerHTML=`Orders: ${count}<br>Total: ${sum} DA`;
+}
+
+/* ================= EXPORT & ARCHIVE ================= */
+function exportExcel(){
+  let csv="Date,Time,Shift,Admin,Total\n";
+  SALES.forEach(s=>csv+=`${s.date},${s.time},${s.shift},${s.admin},${s.total}\n`);
+  let a=document.createElement("a");
+  a.href=URL.createObjectURL(new Blob([csv],{type:"text/csv"}));
+  a.download="CAFE_LEGENDAIRE_TODAY.csv";
+  a.click();
+}
+
+function archiveDay(){
+  if(!confirm("Archive today and reset POS?")) return;
+  let today=new Date().toISOString().split("T")[0];
+  db.collection("archives").doc(today).set({date:today,sales:SALES});
+  db.collection("sales").get().then(snap=>snap.forEach(d=>d.ref.delete()));
+  cart=[];SHIFT="Morning";shift.innerHTML=`<option>${SHIFT}</option>`;
+  reports.innerHTML="";
+  alert("Day archived successfully");
 }
 </script>
 
